# mcpm

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  package.json  publickey.asc  vite.config.ts
.github/: pull_request_template.md
.github/actions/build-binary/: action.yml
.github/actions/build-docker-image/: action.yml
.github/actions/docker-tag-manifest/: action.yml
.github/actions/package-and-push-binary/: action.yml
.github/workflows/: Release.yml  build.yml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: config.rs  mod.rs
src-tauri/src/app/commands/: add.rs  init.rs  install.rs  list.rs  mod.rs  outdated.rs  remove.rs  search.rs  upgrade.rs
src-tauri/src/app/helpers/: cli.rs  mod.rs  semver.rs
src-tauri/src/app/modules/: mod.rs
src-tauri/src/app/modules/core/: add.rs  init.rs  install.rs  install_spec.rs  list.rs  mod.rs  outdated.rs  remove.rs  search.rs  upgrade.rs
src-tauri/src/app/modules/core/ops/: manager.rs
src-tauri/src/app/modules/io/: cli.rs  gui.rs  mod.rs  traits.rs
src-tauri/src/app/modules/lock/: models.rs  services.rs
src-tauri/src/app/modules/manifest/: mod.rs  models.rs  services.rs
src-tauri/src/app/modules/repositories/: interfaces.rs  mod.rs  models.rs  services.rs
src-tauri/src/app/modules/repositories/modrinth/: mod.rs  models.rs  modrinth_repository.rs
