[package]
name = "mcpm"
version = "1.0.0"
description = "A cross-platform package manager for Minecraft mods."
authors = ["Rickiewars"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mcpm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mcpm"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", optional = true }

[features]
default = []
gui = ["tauri", "tauri-build", "tauri-plugin-opener"]

[dependencies]
tauri = { version = "2", optional = true }
tauri-plugin-opener = { version = "2", optional = true }

# Shared dependencies used by both CLI and GUI
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.23", default-features = false, features = [
  "json",
  "rustls-tls",
] }
async-trait = "0.1.89"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
colored = "3.0.0"
dialoguer = "0.12.0"
semver = "1.0.27"
strum = "0.27.2"
strum_macros = "0.27.2"
once_cell = "1.21.3"
futures = "0.3.31"
sha2 = "0.10.9"
dirs = "6.0.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
clap = { version = "4.5", features = ["derive"] }
